# autark-video-studio-universal

./: DEPLOYMENT_SUCCESS.md  IMPLEMENTATION.md  Neuer Ordner.code-workspace  README.md  README_OLD.md  SCHNELLSTART.md  SUMMARY.md  setup_universal_repo.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: universal-repo-check.yml
ai-video-tools/: DEMO.md  README.md  full_pipeline.py  install_ai_tools.py
autark-video-studio/: README.md  autark-video-studio.code-workspace  quick_start.py
autark-video-studio/ai-video-pipeline/: README.md  install_all_tools.py
autark-video-studio/autark/: pyproject.toml
autark-video-studio/autark/src/autark/: __init__.py
autark-video-studio/autark/src/autark/core/: __init__.py  studio.py
autark-video-studio/autark/src/autark/knowledge/: __init__.py  graph.py
autark-video-studio/autark/src/autark/nlp/: __init__.py  deep_thinking.py
autark-video-studio/autark/src/autark/video/: __init__.py  generator.py
autark-video-studio/deep-thinking/: demo.py
docs/: navigation-hub.md
docs/atlas/: architektur.md  glossar.md  konzepte.md  sicherheit.md
docs/data/: README.md
docs/demos/: README.md
docs/governance/: AI_ETHICS_FRAMEWORK.md  COMPLIANCE.md  DATENSCHUTZ.md  INCIDENT_RESPONSE.md  README.md  USAGE_RIGHTS.md
docs/tools/: README.md
scripts/: audio_processor.py  install_software.py
stories/: spannende_geschichte.md
web-animation/: motherboard.html
